[gd_scene load_steps=3 format=3 uid="uid://bhl5bxiechbmt"]

[ext_resource type="Script" path="res://options/options.gd" id="1_5bees"]
[ext_resource type="Texture2D" uid="uid://oa4wif6eh2s5" path="res://assets/Backgrounds/main_menu_scene/main-menu-background.png" id="2_op5xw"]

[node name="options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5bees")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_op5xw")

[node name="Setting_Options" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings_Label" type="Label" parent="Setting_Options"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Settings"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Setting_Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -28.0
offset_right = 51.5
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Setting_Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Full_Screen_Label" type="Label" parent="Setting_Options/HBoxContainer/Labels"]
layout_mode = 2
size_flags_horizontal = 4
text = "Fulscreen"

[node name="VSync_Label" type="Label" parent="Setting_Options/HBoxContainer/Labels"]
layout_mode = 2
text = "VSync"

[node name="Buttons" type="VBoxContainer" parent="Setting_Options/HBoxContainer"]
layout_mode = 2

[node name="Full_Screen_Button" type="CheckBox" parent="Setting_Options/HBoxContainer/Buttons"]
layout_mode = 2

[node name="VSync_Button" type="CheckBox" parent="Setting_Options/HBoxContainer/Buttons"]
layout_mode = 2

[node name="Back_From_Options_Button" type="Button" parent="Setting_Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -31.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="toggled" from="Setting_Options/HBoxContainer/Buttons/Full_Screen_Button" to="." method="_on_full_screen_button_toggled"]
[connection signal="toggled" from="Setting_Options/HBoxContainer/Buttons/VSync_Button" to="." method="_on_v_sync_button_toggled"]
[connection signal="pressed" from="Setting_Options/Back_From_Options_Button" to="." method="_on_back_from_options_button_pressed"]
